# BiDCVC-RT

./: .gitignore  CITATION.cff  README.md  bidcvc_build_backend.py  pyproject.toml
bidcvc-rt/: .gitignore  AGENTS.md  README.md  bidcvc_build_backend.py
bidcvc-rt/docs/: architecture.md  bitstream_format.md  training.md
bidcvc-rt/experiments/latency/: plot.py
bidcvc-rt/experiments/stereo_consistency/: run.py
bidcvc-rt/scripts/: encode_simulcast.py  encode_stereo.py
bidcvc-rt/tests/: test_bitstream_au.py  test_bitstream_sps.py  test_import_sanity.py
configs/codec/: default.yaml
configs/eval/: default.yaml
configs/training/: default.yaml
docs/: DATA.md  INSTALL.md  REPRODUCING.md  evaluation.md  reproducibility.md
docs/legacy/: PROJECT_ARCHITECTURE_DEEP_DIVE.md
experiments/: plot_fair_rd.py
experiments/baselines/: README.md  eval_baselines.py
experiments/latency/: run.py
experiments/rd/: plot.py  run.py
experiments/stereo_consistency/: plot.py
experiments/v1_baseline/: README.md  compress.py  eval_fair_mvsplat.py
experiments/v1_compressor/: README.md  compress.py
experiments/v1_e2e/: README.md  export_eval_fair.py  plot_curves.py  train_e2e.py
experiments/v1_renderer/: README.md  eval_fair_mvsplat.py
legacy/docs/: INSTALL.md
legacy/experiments/v1_e2e/: README.md
legacy/scripts/indices/: build_re10k_dataset_index.py
outputs/: README.md
scripts/: AGENTS.md  decode_stereo.py  eval_latency.py  eval_rd.py  plot_baseline_vs_e2e.sh  run_ablations.py
src/bidcvc/: __init__.py
src/bidcvc/api/: __init__.py  (+2 more)
tests/: conftest.py
(+33 files in other folders)
